--- a/Resources/components.json
+++ b/Resources/components.json
@@ -190,30 +190,39 @@
         "dimension": [ 0, 0, 1, 1 ],
         "margin": [ 0, 0 ],
         "innerMargin": [ 5, 5 ],
-        "gridSize": [ 1, 4 ],
-        "link": 1,
-        "color": [ "BLUE_DARK", "BLUE_LIGHT" ],
+        "gridSize": [ 1, 8 ],
+        "color": [ "GRAY_DARK", "GRAY" ],
         "objects": [
-            {
-                "id": 1,
-                "position": [ 0, 0 ],
-                "alignment": "center",
-                "type": "label",
-                "color": ["GRAY", "BLACK"],
-                "text": "x10,000",
-                "fontSize": -1
-            },
             {
                 "id": 2,
                 "position": [ 0, 1 ],
-                "span": [0, 1],
+                "span": [0, 2],
                 "alignment": "center",
                 "type": "sprite",
                 "img": "icons8-atomic-bomb-96.png"
             },
             {
+                "id": 1,
+                "position": [ 0, 4 ],
+                "span": [ 0, 1 ],
+                "alignment": "right",
+                "type": "label",
+                "color": "BLACK",
+                "text": "x10,000",
+                "fontSize": -2
+            },
+            {
+                "position": [ 0, 5 ],
+                "alignment": "left_bottom",
+                "type": "line",
+                "color": "GRAY"
+                
+            },
+            {
                 "id": 3,
-                "position": [ 0, 3 ],
+                "link": 0,
+                "position": [ 0, 6 ],
+                "span": [ 0, 1 ],
                 "alignment": "center",
                 "type": "button_rectangle_round_shadow",
                 "color": [ "GRAY", "BLUE" ],
@@ -221,7 +230,7 @@
             },
             {
                 "position": [0, 0],
-                "span": [ 0, 3],
+                "span": [ 0, 7],
                 "alignment": "center",
                 "type": "rectangle_line",
                 "color": "BLACK"
@@ -232,30 +241,39 @@
         "dimension": [ 0, 0, 1, 1 ],
         "margin": [ 0, 0 ],
         "innerMargin": [ 5, 5 ],
-        "gridSize": [ 1, 4 ],
-        "link": 1,
-        "color": [ "BLUE_DARK", "BLUE_LIGHT" ],
+        "gridSize": [ 1, 8 ],
+        "color": [ "GRAY_DARK", "GRAY" ],
         "objects": [
-            {
-                "id": 1,
-                "position": [ 0, 0 ],
-                "alignment": "center",
-                "type": "label",
-                "color": ["GRAY", "BLACK"],
-                "text": "x10,000",
-                "fontSize": -1
-            },
             {
                 "id": 2,
                 "position": [ 0, 1 ],
-                "span": [0, 1],
+                "span": [0, 2],
                 "alignment": "center",
                 "type": "sprite",
                 "img": "icons8-atomic-bomb-96.png"
             },
             {
+                "id": 1,
+                "position": [ 0, 4 ],
+                "span": [ 0, 1 ],
+                "alignment": "right",
+                "type": "label",
+                "color": "BLACK",
+                "text": "x10,000",
+                "fontSize": -2
+            },
+            {
+                "position": [ 0, 5 ],
+                "alignment": "left_bottom",
+                "type": "line",
+                "color": "GRAY"
+                
+            },
+            {
                 "id": 3,
-                "position": [ 0, 3 ],
+                "link": 0,
+                "position": [ 0, 6 ],
+                "span": [ 0, 1 ],
                 "alignment": "center",
                 "type": "button_rectangle_round_shadow",
                 "color": [ "GRAY", "BLUE" ],
@@ -264,7 +282,7 @@
             },
             {
                 "position": [0, 0],
-                "span": [ 0, 3],
+                "span": [ 0, 7],
                 "alignment": "center",
                 "type": "rectangle_line",
                 "color": "BLACK"
