--- a/Resources/components.json
+++ b/Resources/components.json
@@ -561,5 +561,45 @@
                 "span": [0, 3]
             }
         ]
+    },
+    "arcade": {
+        "dimension": [ 0, 0, 1, 1 ],
+        "margin": [ 0, 0 ],
+        "innerMargin": [ 1, 1 ],
+        "gridSize": [ 1, 5 ],
+        "color": 0,
+        "objects": [
+            {
+                "id": 1,
+                "position": [ 0, 0 ],
+                "alignment": "center",
+                "type": "label",
+                "color": "GRAY",
+                "text": "title",
+                "fontSize": -1
+            },
+            {
+                "id": 2,
+                "position": [ 0, 1 ],
+                "span": [0, 1],
+                "alignment": "center",
+                "type": "layer",
+                "color": 0
+            },
+            {
+                "id": 3,
+                "position": [ 0, 3 ],
+                "alignment": "center",
+                "type": "layer",
+                "color": 0
+            },
+            {
+                "id": 4,
+                "position": [ 0, 4 ],
+                "alignment": "center",
+                "type": "layer",
+                "color": 0
+            }
+        ]
     }
 }
