--- a/Resources/components.json
+++ b/Resources/components.json
@@ -118,7 +118,7 @@
         "dimension": [ 0, 0, 9, 1 ],
         "margin": [ 10, 5 ],
         "innerMargin": [ 2, 1 ],
-        "gridSize": [ 20, 2 ],
+        "gridSize": [ 15, 2 ],
         "img": null,
         "color": 0,
         "objects": [
@@ -132,7 +132,7 @@
                 "fontSize": 0
             },
             {
-                "id": 12,
+                "id": 11,
                 "position": [ 0, 1 ],
                 "alignment": "left_bottom",
                 "type": "label",
@@ -141,17 +141,16 @@
                 "fontSize": 0
             },
             {
-                "id": 13,
+                "id": 12,
                 "position": [ 1, 1 ],
                 "alignment": "center",
-                "type": "progressbar",
-                "color": [ "BLUE", "GRAY" ],
-                "span": [ 2, 0 ],
+                "type": "label",
+                "color": [ "YELLOW", "BLACK" ],
                 "text": "ROYAL"
             },
             {
                 "id": 3,
-                "position": [ 15, 0 ],
+                "position": [ 11, 0 ],
                 "alignment": "left",
                 "type": "icon_point",
                 "color": "GRAY",
@@ -159,7 +158,7 @@
             },
             {
                 "id": 4,
-                "position": [ 15, 1 ],
+                "position": [ 11, 1 ],
                 "alignment": "left",
                 "type": "icon_heart",
                 "color": "GRAY",
@@ -167,16 +166,16 @@
             },
             {
                 "id": 5,
-                "position": [ 13, 1 ],
+                "position": [ 10, 1 ],
                 "alignment": "center",
                 "type": "button_rectangle_round_shadow",
                 "color": ["GRAY", "DARKGRAY"],
                 "text": "0:40",
                 "fontSize": -1,
-                "span": [1,0]
+                "span": [0,0]
             },
             {
-                "position": [ 19, 0 ],
+                "position": [ 14, 0 ],
                 "alignment": "right",
                 "type": "sprite_button_circle",
                 "link": 10,
@@ -399,7 +398,7 @@
                 "position": [ 1, 4 ],
                 "alignment": "center",
                 "type": "button_rectangle_round_shadow",
-                "color": [ "GRAY", "YELLOW" ],
+                "color": [ "GRAY", "YELLOW_DARK" ],
                 "text": "GIFT",
                 "fontSize": 0
             },
@@ -559,46 +558,6 @@
                 "type": "rectangle_line",
                 "color": "BLACK",
                 "span": [0, 3]
-            }
-        ]
-    },
-    "arcade": {
-        "dimension": [ 0, 0, 1, 1 ],
-        "margin": [ 0, 0 ],
-        "innerMargin": [ 1, 1 ],
-        "gridSize": [ 1, 5 ],
-        "color": 0,
-        "objects": [
-            {
-                "id": 1,
-                "position": [ 0, 0 ],
-                "alignment": "center",
-                "type": "label",
-                "color": "GRAY",
-                "text": "title",
-                "fontSize": -1
-            },
-            {
-                "id": 2,
-                "position": [ 0, 1 ],
-                "span": [0, 1],
-                "alignment": "center",
-                "type": "layer",
-                "color": 0
-            },
-            {
-                "id": 3,
-                "position": [ 0, 3 ],
-                "alignment": "center",
-                "type": "layer",
-                "color": 0
-            },
-            {
-                "id": 4,
-                "position": [ 0, 4 ],
-                "alignment": "center",
-                "type": "layer",
-                "color": 0
             }
         ]
     }
